--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ header h1 {
 }
 @media screen and (max-width: 800px) {
     header h1 {
-        font-size: 6.6vw;
-        padding: 0.5vh 1vw;
+        font-size: 10vw;
+        padding: 1vh 1.5vw 1vh 1.5vw;
     }
 }
 
@@ -83,7 +83,8 @@ nav li a:hover {
 
 .sec-1 {
     background-image: url(static/cover.jpg);
-    background-position: right;
+    background-size: 100vw;
+    background-repeat: no-repeat;
     width: 100%;
     height: 90vh;
 }
@@ -94,8 +95,8 @@ nav li a:hover {
 }
 
 .sec-1 article {
-    background-color: rgb(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
+    /* background-color: rgb(0, 0, 0, 0.1); */
+    /* backdrop-filter: blur(5px); */
     width: 50%;
     position: relative;
     top: 20%;
@@ -104,7 +105,7 @@ nav li a:hover {
 @media screen and (max-width: 800px) {
     .sec-1 article {
         width: 80%;
-        top: 25%;
+        top: 20%;
         left: 10%;
     }
 }
@@ -124,12 +125,49 @@ nav li a:hover {
 }
 
 .sec-2 {
-    background-color: lime;
+    background-image: url(static/cover.jpg);
+    background-position: right;
+    /* background-size: 100vw; */
     width: 100%;
-    height: 75vh;
+    height: 100vh;
 }
 @media screen and (max-width: 800px) {
     .sec-2 {
         height: 40vh;
     }
+}
+
+.sec-2 article{
+    background-color: rgb(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    height: 60%;
+    width: 20%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+.sec-2 article:hover {
+    background-color: rgb(0, 0, 0);
+    border: 1px solid var(--red);
+}
+
+.sec-2 article ul {
+    list-style-type: none;
+}
+
+.sec-2 article h2 {
+    color: var(--red);
+    font-family: 'Ubuntu';
+    font-size: 3vw;
+    text-align: right;
+    padding: 5% 10%;
+}
+
+.sec-2 article ul li {
+    color: var(--red);
+    font-family: 'Montserrat';
+    font-size: 2vw;
+    padding: 0% 10%;
+    line-height: 150%;
 }
