--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ nav li a:hover {
     background-image: url(static/cover.jpg);
     background-size: 100vw;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 90vh;
+    width: 100vw;
+    height: 80vh;
 }
 @media screen and (max-width: 800px) {
     .sec-1 {
@@ -113,14 +113,14 @@ nav li a:hover {
 
 .sec-1 article p {
     color: var(--white);
-    font-size: 150%;
+    font-size: 1.7vw;
     font-family: 'Montserrat';
     line-height: 150%;
     padding: 5%;
 }
 @media screen and (max-width: 800px) {
     .sec-1 article p {
-        font-size: 100%;
+        font-size: 3.5vw;
         padding: 2%;
     }
 }
