--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ nav li a:hover {
 }
 @media screen and (max-width: 800px) {
     .sec-1 {
-        height: 40vh;
+        height: 25vh;
         background-size: 100vw 40vh;
     }
 }
@@ -133,9 +133,21 @@ nav li a:hover {
     }
 }
 
-.sec-2 {
-    background-image: url(static/cover.jpg);
+.fixed-bg {
+    background-image: url("/static/cover.jpg");
     background-position: right;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+@media screen and (max-width: 800px) {
+    .fixed-bg{
+        background-position: bottom;
+    }
+}
+
+.sec-2 {
+    /* background-image: url(static/cover.jpg);
+    background-position: right; */
     width: 100%;
     height: 100vh;
 }
@@ -177,7 +189,7 @@ nav li a:hover {
 }
 @media screen and (max-width: 800px) {
     .sec-2 article h2{
-        font-size: 10vw;
+        font-size: 7vw;
     }
 }
 
@@ -193,4 +205,11 @@ nav li a:hover {
         font-size: 4.5vw;
         /* font-weight: bold; */
     }
+}
+
+.sec-3 {
+    /* background-image: url(static/cover.jpg);
+    background-position: right; */
+    width: 100%;
+    height: 100vh;
 }
