--- a/style.css
+++ b/style.css
@@ -299,3 +299,15 @@ nav li a:hover {
         font-size: 3vw;
     }
 }
+
+.sec-4 {
+    /* background-image: url(static/cover.jpg);
+    background-position: right; */
+    width: 100%;
+    height: 100vh;
+}
+@media screen and (max-width: 780px) {
+    .sec-4{
+        height: 40vh;
+    }
+}
