--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ nav li a:hover {
     background-color: rgb(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
     /* height: 60%; */
-    width: 20%;
+    width: 50%;
     position: relative;
     top: 50%;
     left: 50%;
@@ -309,5 +309,63 @@ nav li a:hover {
 @media screen and (max-width: 780px) {
     .sec-4{
         height: 40vh;
+    }
+}
+
+.sec-4 article {
+    background-color: rgb(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    /* height: 60%; */
+    width: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all .2s ease;
+    -webkit-transition: all .2s ease;
+}
+.sec-4 article:hover {
+    background-color: rgb(0, 0, 0, 0.7);
+}
+
+.sec-4 article ul {
+    list-style-type: none;
+}
+
+.sec-4 article h2 {
+    color: var(--red);
+    font-family: 'Ubuntu';
+    font-size: 3vw;
+    text-align: right;
+    padding: 5% 10%;
+}
+@media screen and (max-width: 780px) {
+    .sec-4 article h2{
+        font-size: 7vw;
+    }
+}
+
+.sec-4 article ul li h3, p{
+    color: var(--red);
+    font-family: 'Montserrat';
+    font-size: 2vw;
+    padding: 0% 10%;
+    /* line-height: 150%; */
+}
+.sec-4 article ul li:last-child {
+    padding-bottom: 5%;
+}
+@media screen and (max-width: 780px) {
+    .sec-4 article ul li h3, p{
+        font-size: 4.5vw;
+    }
+}
+
+.sec-4 article ul li p {
+    font-size: 1.5vw;
+}
+@media screen and (max-width: 780px) {
+    .sec-4 article ul li p{
+        font-size: 3vw;
     }
 }
