--- a/style.css
+++ b/style.css
@@ -18,12 +18,9 @@
 	cursor: default;
 }
 
-/* @media (hover: hover) { 
-    *:hover {
-        background: red;
-        color: white;
-    }
-} */
+section {
+    border: 1px solid lime;
+}
 
 html {
     scroll-behavior: smooth;
@@ -166,7 +163,7 @@ nav li a:hover {
 }
 @media screen and (max-width: 780px) {
     .sec-2 {
-        height: 40vh;
+        height: 45vh;
     }
 }
 
@@ -174,7 +171,7 @@ nav li a:hover {
     background-color: rgb(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
     /* height: 60%; */
-    width: 50%;
+    width: 40%;
     position: relative;
     top: 50%;
     left: 50%;
@@ -189,7 +186,7 @@ nav li a:hover {
     .sec-2 article{
         width: 80%;
         height: 80%;
-        overflow-y: scroll;
+        /* overflow-y: scroll; */
     }
 }
 
@@ -311,7 +308,7 @@ nav li a:hover {
 }
 @media screen and (max-width: 780px) {
     .sec-4{
-        height: 40vh;
+        height: 60vh;
     }
 }
 
@@ -398,5 +395,17 @@ nav li a:hover {
     .sec-4 article ul li p{
         font-size: 3vw;
         color: var(--red);
+    }
+}
+
+.sec-5 {
+    /* background-image: url(static/cover.jpg);
+    background-position: right; */
+    width: 100%;
+    height: 100vh;
+}
+@media screen and (max-width: 780px) {
+    .sec-5{
+        height: 60vh;
     }
 }
