--- a/style.css
+++ b/style.css
@@ -401,11 +401,31 @@ nav li a:hover {
 .sec-5 {
     /* background-image: url(static/cover.jpg);
     background-position: right; */
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    height: 50vh;
 }
 @media screen and (max-width: 780px) {
     .sec-5{
         height: 60vh;
     }
+}
+
+.sec-5 div {
+    width: 80%;
+    height: 80%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    background-color: lightblue;
+}
+
+.sec-5 div h2 {
+    color: var(--red);
+    font-family: 'Ubuntu';
+    font-size: 3vw;
+    text-align: left;
+    padding: 2% 3%;
 }
