--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ nav li a:hover {
 }
 @media screen and (max-width: 780px) {
     .sec-5{
-        height: 60vh;
+        height: 40vh;
     }
 }
 
@@ -418,6 +418,11 @@ nav li a:hover {
     backdrop-filter: blur(10px);
     display: inline-block;
     margin: 2% 2%;
+}
+@media screen and (max-width: 780px) {
+    .sec-5 h2{
+        font-size: 5vw;
+    }
 }
 
 .sec-5 div {
@@ -432,7 +437,12 @@ nav li a:hover {
     /* grid-gap: 10px; */
     background-color: rgb(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
-
+}
+@media screen and (max-width: 780px) {
+    .sec-5 div{
+        width: 50%;
+        height: 60%;
+    }
 }
 
 .fa {
@@ -441,7 +451,6 @@ nav li a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .fa-envelope {
