fix resume link

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ nav li {
 }
 nav li:last-child {
     float: right;
+    font-weight: bolder;
 }
 
 nav li a {
@@ -404,7 +405,7 @@ nav li a:hover {
 }
 @media screen and (max-width: 780px) {
     .sec-5{
-        height: 30vh;
+        height: 40vh;
     }
 }
 
@@ -489,16 +490,23 @@ nav li a:hover {
     background-color: #2867B2;
 }
 
-footer {
-    background-image: url(static/cover.jpg);
-    background-position: right;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 50vh;
+#resume-phone {
+    display: none;
 }
 @media screen and (max-width: 780px) {
-    footer {
-        height: 10vh;
-        background-size: 100vw 40vh;
+    #resume-phone {
+        display: block;
+        text-align: center;
+        background-color: rgb(0, 0, 0, 0.7);
+        backdrop-filter: blur(10px);
+        width: 50%;
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0%);
+    }
+    #resume-phone a {
+        color: var(--red);
+        text-align: center;
+        /* text-decoration: none; */
     }
 }
