--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ nav li a:hover {
 .sec-1 article {
     width: 50%;
     position: relative;
+    backdrop-filter: blur(2px);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
