--- a/style.css
+++ b/style.css
@@ -1,517 +1,63 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+.first-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-:root {
-	--black: #171717;
-	--grey: #363636;
-    --red: rgb(202, 3, 3);
-	--white: #EDEDED;
+@media screen and (max-width: 768px) {
+  .first-section .scroll-icon {
+    display: none;
+  }
 }
 
 * {
-	margin: 0px;
-	padding: 0px;
-    color: rgb(0, 204, 255);
-}
-*:hover {
-	cursor: default;
-}
-
-a:hover {
-    cursor: pointer;
+  margin: 0px;
+  padding: 0px;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: var(--black);
+  background-color: #85ACC2;
+  overflow: hidden;
 }
-body::-webkit-scrollbar {
-    display: none;
-}
-body.example {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-
-header {
-    background-color: var(--red);
-    border-bottom: 1px solid var(--red);
+@media screen and (max-width: 768px) {
+  body {
+    overflow: visible;
+  }
 }
 
-header h1 {
-    color: var(--black);
-    font-size: 3.5vw;
-    padding: 2.8vh 1vw 2.8vh 1vw;
-    font-family: 'Great Vibes'
-}
-@media screen and (max-width: 780px) {
-    header h1 {
-        font-size: 10vw;
-        padding: 1vh 1.5vw 1vh 1.5vw;
-    }
+section {
+  height: 100vh;
+  width: 100vw;
 }
 
-nav {
-    background-color: var(--black);
-    overflow: hidden;
+.first-section {
+  flex-direction: column;
 }
-@media screen and (max-width: 780px) {
-    nav {
-        display: none;
-    }
+.first-section h1 {
+  font-size: 5vw;
+  font-family: "Raleway", sans-serif;
 }
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: var(--black);
+.first-section h1 span {
+  color: #ff0000;
 }
-
-nav li {
-    float: left;
+@media screen and (max-width: 768px) {
+  .first-section h1 {
+    font-size: 15vw;
+    padding-left: 3%;
+  }
 }
-nav li:last-child {
-    float: right;
-    font-weight: bolder;
+.first-section .scroll-icon {
+  width: 5vw;
+  margin-top: 10%;
+  transform: rotate(0deg);
 }
-
-nav li a {
-    display: block;
-    color: var(--red);
-    font-family: 'Lato';
-    text-align: center;
-    padding: 1.5vh 2vw;
-    text-decoration: none;
-}
-nav li a:hover {
-    background-color: var(--red);
-    color: var(--black);
+.first-section .scroll-icon:hover {
+  filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
 }
 
-.sec-1 {
-    background-image: url(static/cover.jpg);
-    background-size: 100vw;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
-}
-@media screen and (max-width: 780px) {
-    .sec-1 {
-        height: 25vh;
-        background-size: 100vw 40vh;
-    }
-}
-
-.sec-1 article {
-    width: 50%;
-    position: relative;
-    backdrop-filter: blur(2px);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all .2s ease;
-    -webkit-transition: all .2s ease;
-}
-.sec-1 article:hover {
-    backdrop-filter: blur(3px);
-    -webkit-box-shadow: 0 0 50px 5px var(--red); 
-    -moz-box-shadow: 0 0 50px 5px var(--red); 
-    box-shadow: 0 0 50px 5px var(--red);
-}
-@media screen and (max-width: 780px) {
-    .sec-1 article {
-        transform: translate(0%, 0%);
-        width: 80%;
-        top: 15%;
-        left: 10%;
-    }
-}
-
-.sec-1 article p {
-    color: var(--white);
-    font-size: 1.7vw;
-    font-family: 'Montserrat';
-    line-height: 150%;
-    padding: 5%;
-}
-@media screen and (max-width: 780px) {
-    .sec-1 article p {
-        font-size: 3.2vw;
-        padding: 2%;
-    }
-}
-.sec-1 article p sup {
-    color: var(--white);
-    font-family: 'Montserrat';
-}
-
-.fixed-bg {
-    background-image: url("/static/cover.jpg");
-    background-position: right;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-@media screen and (max-width: 780px) {
-    .fixed-bg{
-        background-position: bottom;
-    }
-}
-
-.sec-2 {
-    width: 100%;
-    height: 100vh;
-}
-@media screen and (max-width: 780px) {
-    .sec-2 {
-        height: 45vh;
-    }
-}
-
-.sec-2 article{
-    background-color: rgb(0, 0, 0, 0.7);
-    backdrop-filter: blur(25px);
-    width: 40%;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all .2s ease;
-    -webkit-transition: all .2s ease;
-}
-.sec-2 article:hover {
-    background-color: rgb(0, 0, 0, 0.8);
-    -webkit-box-shadow: 0 0 20px 5px var(--red); 
-    -moz-box-shadow: 0 0 20px 5px var(--red); 
-    box-shadow: 0 0 20px 5px var(--red);    
-}
-@media screen and (max-width: 780px) {
-    .sec-2 article{
-        width: 80%;
-        height: 80%;
-    }
-}
-
-.sec-2 article ul {
-    list-style-type: none;
-}
-
-.sec-2 article h2 {
-    color: var(--red);
-    font-family: 'Lato';
-    font-size: 3vw;
-    text-align: right;
-    padding: 5% 10%;
-}
-@media screen and (max-width: 780px) {
-    .sec-2 article h2{
-        font-size: 7vw;
-    }
-}
-
-.sec-2 article ul li {
-    color: var(--red);
-    font-family: 'Montserrat';
-    font-size: 2vw;
-    font-weight: bold;
-    padding: 0% 10%;
-    line-height: 150%;
-}
-.sec-2 article ul li:last-child {
-    padding-bottom: 10%;
-}
-@media screen and (max-width: 780px) {
-    .sec-2 article ul li{
-        font-size: 4.5vw;
-    }
-}
-
-.sec-3 {
-    width: 100%;
-    height: 100vh;
-}
-@media screen and (max-width: 780px) {
-    .sec-3{
-        height: 40vh;
-    }
-}
-
-.sec-3 article {
-    background-color: rgb(0, 0, 0, 0.7);
-    backdrop-filter: blur(10px);
-    width: 50%;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all .2s ease;
-    -webkit-transition: all .2s ease;
-}
-.sec-3 article:hover {
-    background-color: rgb(0, 0, 0, 0.8);
-    -webkit-box-shadow: 0 0 30px 5px var(--red); 
-    -moz-box-shadow: 0 0 30px 5px var(--red); 
-    box-shadow: 0 0 30px 5px var(--red);    
-}
-@media screen and (max-width: 780px) {
-    .sec-3 article{
-        width: 80%;
-    }
-}
-
-.sec-3 article ul {
-    list-style-type: none;
-}
-
-
-.sec-3 article h2 {
-    color: var(--red);
-    font-family: 'Lato';
-    font-size: 3vw;
-    text-align: right;
-    padding: 5% 10%;
-}
-@media screen and (max-width: 780px) {
-    .sec-3 article h2{
-        font-size: 7vw;
-    }
-}
-
-.sec-3 article ul li h3, p{
-    color: var(--red);
-    font-family: 'Montserrat';
-    font-size: 2vw;
-    padding: 0% 10%;
-}
-.sec-3 article ul li:last-child {
-    padding-bottom: 5%;
-}
-@media screen and (max-width: 780px) {
-    .sec-3 article ul li h3, p{
-        font-size: 4.5vw;
-    }
-}
-
-.sec-3 article ul li p {
-    font-size: 1.5vw;
-}
-@media screen and (max-width: 780px) {
-    .sec-3 article ul li p{
-        font-size: 3vw;
-    }
-}
-
-.sec-4 {
-    width: 100%;
-    height: 100vh;
-}
-@media screen and (max-width: 780px) {
-    .sec-4{
-        height: 60vh;
-    }
-}
-
-.sec-4 article {
-    background-color: rgb(0, 0, 0, 0.7);
-    backdrop-filter: blur(10px);
-    height: 90%;
-    width: 50%;
-    overflow-y: scroll;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all .2s ease;
-    -webkit-transition: all .2s ease;
-}
-.sec-4 article::-webkit-scrollbar {
-    display: none;
-}
-.sec-4 article {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-.sec-4 article:hover {
-    background-color: rgb(0, 0, 0, 0.8);
-    -webkit-box-shadow: 0 0 30px 5px var(--red); 
-    -moz-box-shadow: 0 0 30px 5px var(--red); 
-    box-shadow: 0 0 30px 5px var(--red);    
-}
-@media screen and (max-width: 780px) {
-    .sec-4 article{
-        width: 80%;
-    }
-}
-
-.sec-4 article ul {
-    list-style-type: none;
-}
-
-.sec-4 article h2 {
-    color: var(--red);
-    font-family: 'Lato';
-    font-size: 3vw;
-    text-align: right;
-    padding: 5% 10%;
-}
-@media screen and (max-width: 780px) {
-    .sec-4 article h2{
-        font-size: 7vw;
-    }
-}
-
-.sec-4 article ul li h3 a {
-    color: var(--red);
-}
-
-.sec-4 article ul li h3, p{
-    color: var(--red);
-    font-family: 'Montserrat';
-    font-size: 2vw;
-    padding: 0% 10%;
-}
-.sec-4 article ul li:last-child {
-    padding-bottom: 5%;
-}
-@media screen and (max-width: 780px) {
-    .sec-4 article ul li h3, p{
-        font-size: 4.5vw;
-    }
-}
-
-.sec-4 article ul li p {
-    font-size: 1.5vw;
-}
-@media screen and (max-width: 780px) {
-    .sec-4 article ul li p{
-        font-size: 3vw;
-    }
-}
-
-.sec-4 article ul li p a {
-    font-size: 1.5vw;
-    color: var(--red);
-}
-@media screen and (max-width: 780px) {
-    .sec-4 article ul li p{
-        font-size: 3vw;
-        color: var(--red);
-    }
-}
-
-.sec-5 {
-    width: 100vw;
-    height: 70vh;
-}
-@media screen and (max-width: 780px) {
-    .sec-5{
-        height: 40vh;
-    }
-}
-
-.sec-5 h2 {
-    color: var(--red);
-    font-size: 3vw;
-    font-family: 'Lato';
-    background-color: rgb(0, 0, 0, 0.7);
-    backdrop-filter: blur(10px);
-    display: inline-block;
-    margin: 2% 10%;
-}
-@media screen and (max-width: 780px) {
-    .sec-5 h2{
-        font-size: 5vw;
-    }
-}
-
-.sec-5 div {
-    width: 30%;
-    height: 60%;
-    position: relative;
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: grid;
-    grid-template-columns: 50% 50%;
-    background-color: rgb(0, 0, 0, 0.7);
-    backdrop-filter: blur(10px);
-}
-@media screen and (max-width: 780px) {
-    .sec-5 div{
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -70%);    
-        width: 50%;
-        height: 70%;
-    }
-}
-
-.sec-5 div a {
-    text-decoration: none;
-}
-
-.fa {
-    height: 100%;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.fa-envelope {
-    color: #b31b1b;
-}
-.fa-envelope:hover {
-    color: rgb(0, 0, 0);
-    background-color: #b31b1b;
-}
-
-.fa-discord {
-    color: #5865F2;
-}
-.fa-discord:hover {
-    color: rgb(0, 0, 0);
-    background-color: #5865F2;
-}
-
-.fa-github {
-    color: #fafafa;
-}
-.fa-github:hover {
-    color: rgb(0, 0, 0);
-    background-color: #fafafa;
-}
-
-.fa-linkedin {
-    color: #2867B2;
-}
-.fa-linkedin:hover {
-    color: rgb(0, 0, 0);
-    background-color: #2867B2;
-}
-
-#resume-phone {
-    display: none;
-}
-@media screen and (max-width: 780px) {
-    #resume-phone {
-        display: block;
-        text-align: center;
-        background-color: rgb(0, 0, 0, 0.7);
-        backdrop-filter: blur(10px);
-        width: 50%;
-        position: relative;
-        left: 50%;
-        transform: translate(-50%, 0%);
-    }
-    #resume-phone a {
-        color: var(--red);
-        text-align: center;
-        /* text-decoration: none; */
-    }
-}
+/*# sourceMappingURL=style.css.map */
