--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
-.first-section {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap");
+.second-section .skills .skill-part-3, .second-section .skills .skill-part-2, .second-section .skills, .second-section, .first-section {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 @media screen and (max-width: 768px) {
-  .first-section .scroll-icon {
+  .scroll-icon-up, .scroll-icon-down {
     display: none;
   }
 }
@@ -35,15 +37,34 @@ section {
   width: 100vw;
 }
 
+.scroll-icon-down {
+  width: 5vw;
+  transform: rotate(0deg);
+}
+.scroll-icon-down:hover {
+  filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
+}
+
+.scroll-icon-up {
+  width: 5vw;
+  transform: rotate(180deg);
+}
+.scroll-icon-up:hover {
+  filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
+}
+
 .first-section {
   flex-direction: column;
 }
 .first-section h1 {
   font-size: 5vw;
   font-family: "Raleway", sans-serif;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
 }
 .first-section h1 span {
-  color: #ff0000;
+  font-weight: 100;
 }
 @media screen and (max-width: 768px) {
   .first-section h1 {
@@ -51,13 +72,57 @@ section {
     padding-left: 3%;
   }
 }
-.first-section .scroll-icon {
-  width: 5vw;
-  margin-top: 10%;
-  transform: rotate(0deg);
+
+.second-section .skills {
+  width: 80%;
+  height: 80%;
 }
-.first-section .scroll-icon:hover {
-  filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
+@media screen and (max-width: 768px) {
+  .second-section .skills {
+    height: 60%;
+  }
+}
+.second-section .skills div {
+  width: 33%;
+  height: 100%;
+}
+.second-section .skills .skill-part-1 {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.second-section .skills .skill-part-1 p {
+  width: 100%;
+  text-align: right;
+  font-size: 2vw;
+  font-family: monospace;
+}
+@media screen and (max-width: 768px) {
+  .second-section .skills .skill-part-1 p {
+    font-size: 5vw;
+  }
+}
+.second-section .skills .skill-part-2 p {
+  max-height: 100%;
+  font-size: 25vw;
+  font-family: "Titillium Web", sans-serif;
+}
+@media screen and (max-width: 768px) {
+  .second-section .skills .skill-part-2 p {
+    font-size: 45vw;
+  }
+}
+.second-section .skills .skill-part-3 {
+  justify-content: flex-start;
+}
+.second-section .skills .skill-part-3 h1 {
+  font-size: 5vw;
+  font-family: "Raleway", sans-serif;
+}
+@media screen and (max-width: 768px) {
+  .second-section .skills .skill-part-3 h1 {
+    font-size: 10vw;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
