--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
 
 // colors
 $bg: #85ACC2;
@@ -24,7 +26,6 @@ $phone: 768px;
 // mixins
 @mixin scroll-icon($rotation: 0deg) {
     width: 5vw;
-    margin-top: 10%;
     transform: rotate($rotation);
     &:hover {
         filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
@@ -44,6 +45,7 @@ html {
 body {
     background-color: $bg;
     overflow: hidden;
+    // overflow-x: hidden;
     @media screen and (max-width: $phone) {
         overflow: visible;
     }
@@ -54,21 +56,80 @@ section {
     width: 100vw
 }
 
+.scroll-icon-down {
+    @include scroll-icon($rotation: 0deg);
+}
+.scroll-icon-up {
+    @include scroll-icon($rotation: 180deg);
+}
+
 .first-section {
     @extend %flex-center;
     flex-direction: column;
     h1 {
         font-size: 5vw;
         font-family: 'Raleway', sans-serif;
+        text-decoration: underline;
+        text-decoration-thickness: 1px;
+        text-underline-offset: 5px;
         span {
-            color: $accent;
+            font-weight: 100;
         }
         @media screen and (max-width: $phone) {
             font-size: 15vw;
             padding-left: 3%;
         }
     }
-    .scroll-icon {
-        @include scroll-icon($rotation: 0deg);
+}
+
+.second-section {
+    @extend %flex-center;
+    .skills {
+        @extend %flex-center;
+        width: 80%;
+        height: 80%;
+        @media screen and (max-width: $phone) {
+            height: 60%;
+        }
+        div {
+            width: 33%;
+            height: 100%;
+        }
+        .skill-part-1 {
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+            p {
+                width: 100%;
+                text-align: right;
+                font-size: 2vw;
+                font-family: monospace;
+                @media screen and (max-width: $phone) {
+                    font-size: 5vw;
+                }
+            }
+        }
+        .skill-part-2 {
+            @extend %flex-center;
+            p {
+                max-height: 100%;
+                font-size: 25vw;
+                font-family: 'Titillium Web', sans-serif;
+                @media screen and (max-width: $phone) {
+                    font-size: 45vw;
+                }
+            }
+        }
+        .skill-part-3 {
+            @extend %flex-center;
+            justify-content: flex-start;
+            h1 {
+                font-size: 5vw;
+                font-family: 'Raleway', sans-serif;
+                @media screen and (max-width: $phone) {
+                    font-size: 10vw;
+                }
+            }
+        }
     }
 }
