--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap");
-.second-section .skills .skill-part-3, .second-section .skills .skill-part-2, .second-section .skills, .second-section, .first-section {
+.third-section .skills .skill-part-3, .third-section .skills .skill-part-2, .third-section .skills, .third-section, .second-section .out, .second-section, .first-section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,58 +69,85 @@ section {
 @media screen and (max-width: 768px) {
   .first-section h1 {
     font-size: 15vw;
-    padding-left: 3%;
+    padding-left: 5%;
   }
 }
 
-.second-section .skills {
+.second-section .out {
+  width: 80%;
+}
+@media screen and (max-width: 768px) {
+  .second-section .out {
+    width: 90%;
+  }
+}
+.second-section .out .in {
+  width: 60%;
+}
+@media screen and (max-width: 768px) {
+  .second-section .out .in {
+    width: 100%;
+  }
+}
+.second-section .out .in p {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.5vw;
+  line-height: 30px;
+}
+@media screen and (max-width: 768px) {
+  .second-section .out .in p {
+    font-size: 5vw;
+  }
+}
+
+.third-section .skills {
   width: 80%;
   height: 80%;
 }
 @media screen and (max-width: 768px) {
-  .second-section .skills {
+  .third-section .skills {
     height: 60%;
   }
 }
-.second-section .skills div {
+.third-section .skills div {
   width: 33%;
   height: 100%;
 }
-.second-section .skills .skill-part-1 {
+.third-section .skills .skill-part-1 {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
 }
-.second-section .skills .skill-part-1 p {
+.third-section .skills .skill-part-1 p {
   width: 100%;
   text-align: right;
   font-size: 2vw;
   font-family: monospace;
 }
 @media screen and (max-width: 768px) {
-  .second-section .skills .skill-part-1 p {
+  .third-section .skills .skill-part-1 p {
     font-size: 5vw;
   }
 }
-.second-section .skills .skill-part-2 p {
+.third-section .skills .skill-part-2 p {
   max-height: 100%;
   font-size: 25vw;
   font-family: "Titillium Web", sans-serif;
 }
 @media screen and (max-width: 768px) {
-  .second-section .skills .skill-part-2 p {
+  .third-section .skills .skill-part-2 p {
     font-size: 45vw;
   }
 }
-.second-section .skills .skill-part-3 {
+.third-section .skills .skill-part-3 {
   justify-content: flex-start;
 }
-.second-section .skills .skill-part-3 h1 {
+.third-section .skills .skill-part-3 h1 {
   font-size: 5vw;
   font-family: "Raleway", sans-serif;
 }
 @media screen and (max-width: 768px) {
-  .second-section .skills .skill-part-3 h1 {
+  .third-section .skills .skill-part-3 h1 {
     font-size: 10vw;
   }
 }
