--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  background-color: #85ACC2;
+  background-color: #0b0b9d;
   overflow: hidden;
 }
 @media screen and (max-width: 768px) {
@@ -42,7 +42,7 @@ section {
   transform: rotate(0deg);
 }
 .scroll-icon-down:hover {
-  filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
+  filter: invert(40%) sepia(99%) saturate(2263%) hue-rotate(4deg) brightness(98%) contrast(92%);
 }
 
 .scroll-icon-up {
@@ -50,26 +50,28 @@ section {
   transform: rotate(180deg);
 }
 .scroll-icon-up:hover {
-  filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
+  filter: invert(40%) sepia(99%) saturate(2263%) hue-rotate(4deg) brightness(98%) contrast(92%);
 }
 
 .first-section {
+  justify-content: flex-end;
   flex-direction: column;
 }
 .first-section h1 {
+  color: #E8630A;
+  padding-bottom: 40vh;
   font-size: 5vw;
   font-family: "Raleway", sans-serif;
-  text-decoration: underline;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 5px;
 }
 .first-section h1 span {
+  color: #ffffff;
   font-weight: 100;
 }
 @media screen and (max-width: 768px) {
   .first-section h1 {
     font-size: 15vw;
     padding-left: 5%;
+    padding-bottom: 15%;
   }
 }
 
@@ -90,6 +92,7 @@ section {
   }
 }
 .second-section .out .in p {
+  color: #ffffff;
   font-family: "Raleway", sans-serif;
   font-size: 1.5vw;
   line-height: 30px;
@@ -99,6 +102,11 @@ section {
     font-size: 5vw;
   }
 }
+@media screen and (max-width: 768px) {
+  .second-section {
+    height: 60vh;
+  }
+}
 
 .third-section .skills {
   width: 80%;
@@ -106,7 +114,7 @@ section {
 }
 @media screen and (max-width: 768px) {
   .third-section .skills {
-    height: 60%;
+    height: 90%;
   }
 }
 .third-section .skills div {
@@ -119,6 +127,7 @@ section {
   flex-direction: column;
 }
 .third-section .skills .skill-part-1 p {
+  color: #ffffff;
   width: 100%;
   text-align: right;
   font-size: 2vw;
@@ -130,6 +139,7 @@ section {
   }
 }
 .third-section .skills .skill-part-2 p {
+  color: #E8630A;
   max-height: 100%;
   font-size: 25vw;
   font-family: "Titillium Web", sans-serif;
@@ -143,12 +153,18 @@ section {
   justify-content: flex-start;
 }
 .third-section .skills .skill-part-3 h1 {
+  color: #ffffff;
   font-size: 5vw;
   font-family: "Raleway", sans-serif;
 }
 @media screen and (max-width: 768px) {
   .third-section .skills .skill-part-3 h1 {
     font-size: 10vw;
+  }
+}
+@media screen and (max-width: 768px) {
+  .third-section {
+    height: 60vh;
   }
 }
 
