--- a/style.scss
+++ b/style.scss
@@ -3,9 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
 
 // colors
-$bg: #85ACC2;
+$bg: #0b0b9d;
 $black: #000000;
-$accent: #ff0000;
+$white: #ffffff;
+$accent: #E8630A;
 
 // sizes
 $phone: 768px;
@@ -28,8 +29,10 @@ $phone: 768px;
     width: 5vw;
     transform: rotate($rotation);
     &:hover {
-        filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
-    }
+        // filter: invert(17%) sepia(81%) saturate(4125%) hue-rotate(357deg) brightness(100%) contrast(132%);
+        // filter: invert(61%) sepia(34%) saturate(1375%) hue-rotate(360deg) brightness(104%) contrast(105%);
+        filter: invert(40%) sepia(99%) saturate(2263%) hue-rotate(4deg) brightness(98%) contrast(92%);
+        }
     @extend %hide-scroll-icon-mobile;
 }
 
@@ -65,19 +68,24 @@ section {
 
 .first-section {
     @extend %flex-center;
+    justify-content: flex-end;
     flex-direction: column;
     h1 {
+        color: $accent;
+        padding-bottom: 40vh;
         font-size: 5vw;
         font-family: 'Raleway', sans-serif;
-        text-decoration: underline;
-        text-decoration-thickness: 1px;
-        text-underline-offset: 5px;
+        // text-decoration: underline;
+        // text-decoration-thickness: 1px;
+        // text-underline-offset: 5px;
         span {
+            color: $white;
             font-weight: 100;
         }
         @media screen and (max-width: $phone) {
             font-size: 15vw;
             padding-left: 5%;
+            padding-bottom: 15%;
         }
     }
 }
@@ -96,6 +104,7 @@ section {
                 width: 100%;
             }
             p {
+                color: $white;
                 font-family: 'Raleway', sans-serif;
                 font-size: 1.5vw;
                 line-height: 30px;
@@ -104,6 +113,9 @@ section {
                 }
             }
         }
+    }
+    @media screen and (max-width: $phone) {
+        height: 60vh;
     }
 }
 
@@ -114,7 +126,7 @@ section {
         width: 80%;
         height: 80%;
         @media screen and (max-width: $phone) {
-            height: 60%;
+            height: 90%;
         }
         div {
             width: 33%;
@@ -125,6 +137,7 @@ section {
             justify-content: space-around;
             flex-direction: column;
             p {
+                color: $white;
                 width: 100%;
                 text-align: right;
                 font-size: 2vw;
@@ -137,6 +150,7 @@ section {
         .skill-part-2 {
             @extend %flex-center;
             p {
+                color: $accent;
                 max-height: 100%;
                 font-size: 25vw;
                 font-family: 'Titillium Web', sans-serif;
@@ -149,6 +163,7 @@ section {
             @extend %flex-center;
             justify-content: flex-start;
             h1 {
+                color: $white;
                 font-size: 5vw;
                 font-family: 'Raleway', sans-serif;
                 @media screen and (max-width: $phone) {
@@ -156,5 +171,8 @@ section {
                 }
             }
         }
+    }
+    @media screen and (max-width: $phone) {
+        height: 60vh;
     }
 }
