change colors again

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  background-color: #0b0b9d;
+  background-color: #001b5a;
   overflow: hidden;
 }
 @media screen and (max-width: 768px) {
@@ -39,18 +39,26 @@ section {
 
 .scroll-icon-down {
   width: 5vw;
+  padding-bottom: 5vh;
   transform: rotate(0deg);
+  transition: transform 0.2s;
+  filter: invert(64%) sepia(97%) saturate(4700%) hue-rotate(8deg) brightness(92%) contrast(104%);
 }
 .scroll-icon-down:hover {
-  filter: invert(40%) sepia(99%) saturate(2263%) hue-rotate(4deg) brightness(98%) contrast(92%);
+  filter: invert(81%) sepia(28%) saturate(5009%) hue-rotate(336deg) brightness(102%) contrast(99%);
+  transform: rotate(0deg) scale(1.2);
 }
 
 .scroll-icon-up {
   width: 5vw;
+  padding-bottom: 5vh;
   transform: rotate(180deg);
+  transition: transform 0.2s;
+  filter: invert(64%) sepia(97%) saturate(4700%) hue-rotate(8deg) brightness(92%) contrast(104%);
 }
 .scroll-icon-up:hover {
-  filter: invert(40%) sepia(99%) saturate(2263%) hue-rotate(4deg) brightness(98%) contrast(92%);
+  filter: invert(81%) sepia(28%) saturate(5009%) hue-rotate(336deg) brightness(102%) contrast(99%);
+  transform: rotate(180deg) scale(1.2);
 }
 
 .first-section {
@@ -58,13 +66,13 @@ section {
   flex-direction: column;
 }
 .first-section h1 {
-  color: #E8630A;
-  padding-bottom: 40vh;
+  color: #ec6e00;
+  padding-bottom: 35vh;
   font-size: 5vw;
   font-family: "Raleway", sans-serif;
 }
 .first-section h1 span {
-  color: #ffffff;
+  color: #fff0e1;
   font-weight: 100;
 }
 @media screen and (max-width: 768px) {
@@ -92,7 +100,7 @@ section {
   }
 }
 .second-section .out .in p {
-  color: #ffffff;
+  color: #fff0e1;
   font-family: "Raleway", sans-serif;
   font-size: 1.5vw;
   line-height: 30px;
@@ -127,7 +135,7 @@ section {
   flex-direction: column;
 }
 .third-section .skills .skill-part-1 p {
-  color: #ffffff;
+  color: #fff0e1;
   width: 100%;
   text-align: right;
   font-size: 2vw;
@@ -139,7 +147,7 @@ section {
   }
 }
 .third-section .skills .skill-part-2 p {
-  color: #E8630A;
+  color: #ec6e00;
   max-height: 100%;
   font-size: 25vw;
   font-family: "Titillium Web", sans-serif;
@@ -153,7 +161,7 @@ section {
   justify-content: flex-start;
 }
 .third-section .skills .skill-part-3 h1 {
-  color: #ffffff;
+  color: #fff0e1;
   font-size: 5vw;
   font-family: "Raleway", sans-serif;
 }
